fixed hero section margin on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -431,7 +432,11 @@ li {
   }
 
   .hero h1 {
-    margin-top: 4rem;
+    margin-top: 10rem;
+  }
+
+  .countdown-box {
+    margin-bottom: 5rem;
   }
 
   .box-container {
